--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
